# Very-Fast-Dictation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
modules/: stt.py  ui.py
