[project]
name = "veryfastdictation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "parakeet-mlx>=0.3.1",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "pyside6>=6.9.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
